fix(css): hide overflow in style cards
This is a quick fix to remove weird overflow issues caused by images
within cards. Thanks @FreeplayG and @Gusted for reminding me of it.

--- a/scss/ui/_cards.scss
+++ b/scss/ui/_cards.scss
@@ -1,4 +1,5 @@
 .card {
+    overflow-x: hidden;
     min-width: var(--card-min-width);
     border-radius: var(--br-3);
     background-color: var(--bg-2);
